# c_sphere

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: pdxinfo
src/: main.c  mat_math.c  mat_math.h  sphere.c  sphere.h
